Mon Nov 26 19:52:50 GMT 2012  Olly Betts <olly@survex.com>

	* examples/quest.cc: Add --flags command line option to allow setting
	  arbitrary QueryParser flags.

Mon Nov 26 03:02:03 GMT 2012  Olly Betts <olly@survex.com>

	* api/valuerangeproc.cc: Move 3 declarations to where we first use the
	  variables.

Mon Nov 26 02:59:41 GMT 2012  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: We no longer use the highest weighted
	  MSet entry to calculate percentages, so stop searching for it.
	  (Spotted by cppcheck)

Mon Nov 26 02:59:02 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_compact.cc,backends/chert/chert_compact.cc:
	  Remove unused variables (spotted by cppcheck).

Mon Nov 26 02:12:19 GMT 2012  Olly Betts <olly@survex.com>

	* api/maptermlist.h,api/matchspy.cc,api/omdatabase.cc,
	  backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_positionlist.cc,
	  backends/multi/multi_postlist.cc,backends/remote/net_termlist.cc,
	  bin/xapian-delve.cc,matcher/exactphrasepostlist.cc,
	  matcher/mergepostlist.cc,matcher/phrasepostlist.cc,
	  tests/harness/backendmanager.cc: Prefer ++i to i++.

Fri Nov 23 03:38:39 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING,Makefile.am: With lcov 1.10, we no longer need any of our
	  hacky workarounds, so make this a requirement and simplify the rules
	  in the makefile.

Thu Nov 22 23:34:09 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am: Pass -f to lcov, which should avoid the need for the
	  patch we've been applying to lcov.

Thu Nov 22 01:34:05 GMT 2012  Olly Betts <olly@survex.com>

	* backends/flint_lock.cc: Close excess file handles before we get the
	  fcntl() lock, just in case one of those file handles is open on the
	  lock file.
	* tests/api_backend.cc: Add regression test lockfilealreadyopen1.

Thu Nov 22 00:35:51 GMT 2012  Olly Betts <olly@survex.com>

	* common/closefrom.cc,configure.ac: On platforms with the F_MAXFD